--- a/styles.css
+++ b/styles.css
@@ -32,22 +32,22 @@ header {
     margin-top: 50px;
     width: 300px;
     text-align: center;
-   /* border: 1px solid black;*/
+
 }
 .principal {
     color: var(--Grayish-Blue);
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 500;
     margin: 20px 0 30px 0;
 }
 h1 {
     color: var(--Very-Dark-Blue);
-    font-size: 2rem;
+    font-size: 1.9rem;
     font-weight: 200;
 }
 h2 {
     color: var(--Very-Dark-Blue);
-    font-size: 2rem;
+    font-size: 1.9rem;
 }
 .cards_container {
     width: 300px;
@@ -58,14 +58,46 @@ h2 {
     flex-direction: column;
     align-items: center;
 }
-.card {
-    box-shadow: 10px 10px 14px 2px rgba(0,0,0,0.47);
+
+.card1  {
+    box-shadow: 0 5px 20px 0 var(--Grayish-Blue);
     display: flex;
     flex-direction: column;
-    border: 1px solid chartreuse;
+    border-top: 3px solid var(--Cyan);
+    border-radius: 5px;
+    width: 300px;
+    height: 200px;
+}.card2 {
+    box-shadow: 0 5px 20px 0 var(--Grayish-Blue);
+    display: flex;
+    flex-direction: column;
+    border-top: 3px solid var(--Red);
+    border-radius: 5px;
     width: 300px;
     height: 200px;
 }
+.card3 {
+    box-shadow: 0 5px 20px 0 var(--Grayish-Blue);
+    display: flex;
+    display: flex;
+    flex-direction: column;
+    border-top: 3px solid var(--Orange);
+    border-radius: 5px;
+    width: 300px;
+    height: 200px;
+}
+.card4 {
+    box-shadow: 0 5px 20px 0 var(--Grayish-Blue);
+    display: flex;
+    display: flex;
+    flex-direction: column;
+    border-top: 3px solid var(--Blue);
+    border-radius: 5px;
+    width: 300px;
+    height: 200px;
+}
+
+
 .tittlecard {
     color: var(--Very-Dark-Blue);
     font-size: 1.5rem;
@@ -78,12 +110,32 @@ h2 {
     line-height: 2;
     color: var(--Grayish-Blue);
 }
-.logo{
-    margin: 50px 10px 0 0;
+
+.logo-lupa {
+    margin: 40px 15px 0 0;
     align-self: flex-end;
     width: 40px;
     height: 40px;
 }
+.logo-casa {
+    margin: 30px 15px 0 0;
+    align-self: flex-end;
+    width: 40px;
+    height: 40px;
+}
+.logo-foco {
+    margin: 30px 15px 0 0;
+    align-self: flex-end;
+    width: 40px;
+    height: 40px;
+}
+.logo-calc {
+    margin: 40px 15px 0 0;
+    align-self: flex-end;
+    width: 40px;
+    height: 40px;
+}
+
 
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
