--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,8 @@ h1, h2 {
         width: 750px;
         height: 455px;
         display: grid;
+        justify-items: center;
+        align-items: center;
         grid-template-columns: repeat(2, 1fr);
 }
 
@@ -176,7 +178,6 @@ header {
 }    
 .card {
     width: 320px;
-    margin-left: 28px;
 }    
 .card1 {
     grid-column: 1 / 2;
@@ -199,6 +200,7 @@ header {
 .cards_container{
         width: 1100px;
         display: grid;
+        justify-items: center;
         grid-template-columns: repeat(3, 1fr);
         gap: 10px;
         grid-template-areas: 
@@ -216,7 +218,6 @@ header {
 }    
 .card {
     width: 320px;
-    margin-left: 15px;
 }   
 .card1 {
     grid-area: izq;
